netwerk/protocol/http/nsHttpHandler.cpp
@@ -2488,8 +2488,9 @@ nsresult nsHttpHandler::SpeculativeConnectInternal(
   nsAutoCString username;
   aURI->GetUsername(username);
 
-  auto *ci = new nsHttpConnectionInfo(host, port, EmptyCString(), username,
-                                      nullptr, originAttributes, usingSSL);
+  RefPtr<nsHttpConnectionInfo> ci =
+      new nsHttpConnectionInfo(host, port, EmptyCString(), username, nullptr,
+                               originAttributes, usingSSL);
   ci->SetAnonymous(anonymous);
 
   return SpeculativeConnect(ci, aCallbacks);
